--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - A Pen by Mahajan Kapil</title>
+  <title>Photo card GF</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
 </head>
 <body>
@@ -92,6 +93,14 @@ Instagram: https://www.instagram.com/college_wishlist
         </div>
 	</div>
 	<div class="carousel-item">
+		<div class="carousel-box">
+			<div class="title">I love You ❤️</div>
+			<div class="num">10</div>
+			<img src="https://iili.io/2C06Dsj.jpg" />
+        </div>
+	</div>
+
+    <div class="carousel-item">
 		<div class="carousel-box">
 			<div class="title">I love You ❤️</div>
 			<div class="num">10</div>
