--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Photo card GF</title>
+  <title>Crash card</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="icon" type="image/x-icon" href="/images/fav.png">
 
