--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Instagram: https://www.instagram.com/college_wishlist
 
 
 
-<a href="https://www.instagram.com/college_wishlist" target="_blank" class="logo">C</a>
+<a href="https://www.instagram.com/im_ahad.islam3/" target="_blank" class="logo">C</a>
 <div class="social">
   <a href="#" target="_blank"
 		><svg>
