--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Instagram: https://www.instagram.com/college_wishlist
 		><svg>
 			<use xlink:href="#ico-linkedin"></use></svg
 	></a>
-	<a href="https://www.instagram.com/college_wishlist" target="_blank"
+	<a href="https://www.instagram.com/im_ahad.islam3" target="_blank"
 		><svg>
 			<use xlink:href="#ico-instagram"></use></svg
 ></a>
